--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
     background-color: #2A2C2F;
     color: white;
-    
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
