--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,27 +6,14 @@
     font-size: 72px;
     line-height: 1.06;
     text-align: center;
-    text-decoration: none;
-    margin: 245px auto 32px;
     max-width: 560px;
+    margin: 0 auto 32px;
     z-index: 1;
-}
-
-@media screen and (max-width: 1279px) {
-    .cover__title {
-        margin: 195px auto 32px;
-    }
-}
-
-@media screen and (max-width: 1023px) {
-    .cover__title {
-        margin: 115px auto 32px;
-    }
 }
 
 @media screen and (max-width: 767px) {
     .cover__title {
-        margin: 33px auto 16px;
+        margin: 0 auto 16px;
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
