--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
-    margin: 92px 48px 24px;
+    margin: 92px auto 24px;
     display: flex;
-    justify-content: space-between;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 1023px) {
