--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 .header {
     display: flex;
-    margin: 24px 48px 0;
+    margin: 24px auto 0;
     justify-content: space-between;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 1023px) {
