--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,14 @@
 .header {
     display: flex;
-    margin: 28px 48px 0;
+    margin: 28px auto 0;
     justify-content: space-between;
     max-width: 1184px;
+}
+
+@media screen and (max-width: 1280px) {
+    .header {
+        margin: 28px 48px 0;
+    }
 }
 
 @media screen and (max-width: 1023px) {
